--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-hello, world
+<h1>Hello, World!</h1>
+<h2>This is me, Gabriel.</h2>
+<h3>A Quant Person</h3>
+<h4>Using Python</h4>
+<h5>Loving Tech</h5>
+<h6>Being A Geek</h6>
