restructure the files.

--- a/index.html
+++ b/index.html
@@ -4,3 +4,41 @@
 <h4>Using Python</h4>
 <h5>Loving Tech</h5>
 <h6>Being A Geek</h6>
+
+
+
+<h1>About me</h1>
+
+```markdown
+I am an enthusiast in math and programming while I was pursuing my degree of bachelor in Finance. To be more specific, I enjoy solving real world through a logical and explainable way by modeling with mathematical methods using computer science skills. In fact, I always keep my eyes on those ideas and techniques may changing the world as well. Welcome anyone to connect and discuss !
+
+Email: gabrielwfeng@gmail.com
+
+Experiences on Trading Strategy Development
+- Focus on CTA (Commodity Trading Advisory) and Stock Investment
+- Keywords: 1. Factor(Alpha) Discovery/Optimization and Evaluation; 2. Time Series(Statistical Arbitrage, Causality Inference, Pair trading); 3. High/Mid Frequency Data; 4. Regime Switching, 5. Machine/Deep/Reinforcement Learning, 6. Sentiment Analysis
+- Accomplishments: 1. Constructed Factor Evaluation Framework; 2. Discovered some unique factors
+
+Skills:
+- Strengths in quantitative method in finance and data analytics.
+- Deep insight in data processing for factor discovery and strategy development
+- Sense on quantitative finance and unique angles for trading strategy
+- Advanced proficiency in Python, Matlab and R. (3-years experiences)
+- Knowledge in ML/DL/RL, NLP
+
+Interests
+- Quantitative Trading Strategy Development
+- REITs Management
+- Blockchain and Cryptocurrency
+- Artificial Intelligence (ML/DL/RL)
+```
+
+
+
+
+<a href="https://www.linkedin.com/in/gabrielfeng">LinkedIn</a>
+<a href="https://github.com/Gabrielvon">Github</a>
+<a href="https://github.com/Gabrielvon">Github Page</a>
+<a href="https://www.instagram.com/gabriel_feng/">Instagram</a>
+
+<img src="material/smile.jpg" alt="Smiley face" height="42" width="42">
