--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <h1>Hello, World!</h1>
 <h2>This is me, Gabriel.</h2>
 <h3>A Quant Person</h3>
@@ -9,7 +10,7 @@
 
 <h1>About me</h1>
 
-```markdown
+<body>
 I am an enthusiast in math and programming while I was pursuing my degree of bachelor in Finance. To be more specific, I enjoy solving real world through a logical and explainable way by modeling with mathematical methods using computer science skills. In fact, I always keep my eyes on those ideas and techniques may changing the world as well. Welcome anyone to connect and discuss !
 
 Email: gabrielwfeng@gmail.com
@@ -31,7 +32,7 @@ Interests
 - REITs Management
 - Blockchain and Cryptocurrency
 - Artificial Intelligence (ML/DL/RL)
-```
+</body>
 
 
 
@@ -42,3 +43,5 @@ Interests
 <a href="https://www.instagram.com/gabriel_feng/">Instagram</a>
 
 <img src="material/smile.jpg" alt="Smiley face" height="42" width="42">
+
+</html>
