--- a/_posts/2018-05-26-about-me.html
+++ b/_posts/2018-05-26-about-me.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Blog Init"
 subtitle: ""
-date:   2018-05-30
+date:   2018-05-27
 background: '/img/posts/06.jpg'
 ---
 
@@ -14,8 +14,8 @@ background: '/img/posts/06.jpg'
     何用处。虽然大三之前尝试了很多，知道了自己不喜欢和不擅长什么，但却始终没找到方向。在迷茫之际，却慢慢模糊地给自
     己未来定了个看起来遥不可及的目标。偶然读了一本关于大数据的书，打开了我的新世界，对自己的未来规划有一点点眉目，
     虽然基础薄弱，但不足以妨碍我前行的决心。后来决定出国深造，进修了一个数理金融硕士。慢慢地，对自己感兴趣的工作内
-    容有了更简练的总结，**通过数学知识和对金融的理解，使用计算机等工具，模拟测试现实世界的问题，并提出有效的解决方
-    案**。广义的描述其实是，希望能通过基础学识，高效地解决现实世界遇到的各种大小问题。
+    容有了更简练的总结，<b>通过数学知识和对金融的理解，使用计算机等工具，模拟测试现实世界的问题，并提出有效的解决方
+    案</b>。广义的描述其实是，希望能通过基础学识，高效地解决现实世界遇到的各种大小问题。
 </p>
 
 <p>
@@ -25,7 +25,7 @@ background: '/img/posts/06.jpg'
 
 <p>
     如果有吐槽和反对意见，欢迎随时和我交流。<br>
-    <a href="gabrielwf.me/contact.html">Contact Me</a>
+    <a href="/contact.html">Contact Me</a>
 </p>
 
 <br>
