--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: Dreamer, Problems Solver and Quant.
-background: '/img/bg-about.jpg'
+background: ''
 ---
 
 <body>
