--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Contact Me
 description: Your comments are valuable to me.
-background: '/img/bg-contact.jpg'
+background: ''
 form: true
 ---
 
