--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@ background: ''
 
 
 <p>
-    <br>Contact Me
-    <br>gabrielwfeng@gmail.com
-    <br>gabrielwfeng@163.com
+    <b>Contact</b>>
+    <br>    gabrielwfeng@gmail.com
+    <br>    gabrielwfeng@163.com
 </p>
 
