embeded picks to about.html

--- a/about.html
+++ b/about.html
@@ -2,11 +2,17 @@
 layout: page
 title: About Me
 description: Dreamer, Problems Solver and Quant.
-background: ''
+background:
 ---
 
 <body>
     <br>一个永远活在28岁的人。
     <br>A person living at his 28 for a long long time.
 </body>
+<br>
+<br>
+<a href="https://www.flickr.com/photos/gabriel_feng/15271207846/in/album-72157646096345978/">
+    <img src="https://farm4.staticflickr.com/3921/15271207846_1724947be3_k.jpg" width="640" height="480" alt="Untitled">
+</a>
+
 
