--- a/_posts/2018-05-27-blog-init.html
+++ b/_posts/2018-05-27-blog-init.html
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Blog Init"
-subtitle: "开篇"
+title:  "Hello, World."
+subtitle: "Blog Init."
 date:   2018-05-27
 background: ''
 ---
