--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-description: Dreamer, Problems Solver and Quant.
+description: Dreamer, Solver and Quant.
 background:
 ---
 
