--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: Dreamer, Solver and Quant.
-background:
+background: ''
 ---
 
 <body>
@@ -11,8 +11,4 @@ background:
 </body>
 <br>
 <br>
-<a href="https://www.flickr.com/photos/gabriel_feng/15271207846/in/album-72157646096345978/">
-    <img src="https://farm4.staticflickr.com/3921/15271207846_1724947be3_k.jpg" width="640" height="480" alt="Untitled">
-</a>
-
-
+<img src="/img/bg-about2.jpg", width="640" height="480">
