updates repo and removed templates from other

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: Dreamer, Solver and Quant.
-background: ''
+background: 'img/bg-index.jpg'
 ---
 
 <body>
