--- a/_posts/2018-07-06-cs231-summary.html
+++ b/_posts/2018-07-06-cs231-summary.html
@@ -11,15 +11,15 @@ background: ''
 <h3>废话</h3>
 <hr>
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     几年前还在念研究生的时候，有自学机器学习等工具，其中上了Andrew Ng的课，弄清楚了简单的原理，然后那个学期
     的课余时间和朋友一起玩了一两个项目，边做边学，然后就基本没有怎么用过了，倒是有一直关注工业界的应用和发展。
 </p>
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     最近因为项目需要，利用下班时间，花了两周，一口气把stanford的cs231n上完了。课程不难，我大概看懂了百分之
-    七八十。讲得通俗易懂，如果只是应用，不涉及深入研究，大概足够了。
-</p>
-<p>
-    大概说两个内容，一是非常粗糙的课程内容总结；二是这两周的相关思考对我在量化研究中带来的脑洞。
+    七八十。讲得通俗易懂，如果只是应用，不涉及深入研究，大概足够了。本文大概说两个内容，一是非常粗糙的课程内
+    容总结；二是这两周的相关思考对我在量化研究中带来的脑洞。
 </p>
 
 
@@ -27,6 +27,7 @@ background: ''
 <h3>课堂总结</h3>
 <hr>
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     我看的是B站上
     <a href="https://www.bilibili.com/video/av17204303">2017 Spring</a>
     的版本，好像youtube也有，不想被字幕打扰的朋友可以去看一下。课程提及一下这些
@@ -125,6 +126,7 @@ background: ''
 <h3>量化脑洞</h3>
 <hr>
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     业内大概很多团队都有尝试使用神经网络(NN)，但是鲜有听闻有完全交由NN模型决定交易的产品推出。个人认为主要原因大
     概有两点，一是金融市场中各种数据的性质和特征非常不一样，很难通过模型直接跑出有效的策略；二是即使有跑出不错的策略，
     由于不可解释，基金经理无法有效控制，导致看着漂亮的收益曲线但不能实盘使用。在我上这门课的这两周，我也有一直在思
@@ -141,6 +143,7 @@ background: ''
     </ol>
 </p>
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     基于我对神经网络的理解，我认为基础框架主要分为三大部分，分别为制定数据生成规则，设计网络结构，确定学习目标。通俗
     点说，机器一开始自己是一片白纸，对世界的理解也是一片白纸，只要给他呈现这个世界，他就会基于他的天赋去学习对目标最
     有利的观察世界的方式。你喂给他的数据，就是这个世界的呈现，所以数据输入可以是任何形态，只要这个规则是固定，也就是
