--- a/_posts/2018-07-12-improve-intellegence.html
+++ b/_posts/2018-07-12-improve-intellegence.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "酷炫脑智力课"
-subtitle: "Ideas to Improve Intellgence"
+subtitle: "Ideas to Improve Intellegence"
 date:   2018-07-12
 background: ''
 ---
