changed theme created by Hux

--- a/_posts/2018-05-29-intro.html
+++ b/_posts/2018-05-29-intro.html
@@ -7,6 +7,7 @@ background: ''
 ---
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     本科之前对自己的未来一直没什么想法，参考了家人的建议选了金融。读下来发现这个方向很宽泛，知道学了什么，不知道有
     何用处。虽然大三之前尝试了很多，知道了自己不喜欢和不擅长什么，但却始终没找到方向。在迷茫之际，却慢慢模糊地给自
     己未来定了个看起来遥不可及的目标。偶然读了一本关于大数据的书，打开了我的新世界，对自己的未来规划有一点点眉目，
@@ -16,6 +17,7 @@ background: ''
 </p>
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     我现在从事中高频量化交易研究，这属于投资领域里面的小众领域。国外大概从八十年代就开始有先行者开始尝试了，发展到
     现在在国外，尤其是美国，已经是很成熟了，人才市场逐渐饱和，各行各业顶尖人才都往里面聚集，招人要求越来越高。在国
     内，个人主观感觉大概是从2010年开始的，其实我相信在2010年之前有少数人酝酿了很久，只是政策和监管等各方面原因没法
@@ -27,6 +29,7 @@ background: ''
 </p>
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     除了量化投资，我对其他一切与数学，计算机，金融的内容都感兴趣。区块链的生态发展是我最近业余关注的一个方向，欢迎
     交流指教。
 </p>
