--- a/_posts/2018-07-12-improve-intellegence.html
+++ b/_posts/2018-07-12-improve-intellegence.html
@@ -1,9 +1,15 @@
 ---
-layout: post
-title:  "酷炫脑智力课"
-subtitle: "Ideas to Improve Intellegence"
-date:   2018-07-12
-background: ''
+
+layout:     post
+title:      "酷炫脑智力课"
+subtitle:   "Ideas to Improve Intellegence"
+date:       2018-07-12 12:00:00
+author:     "Gabriel"
+header-img: "img/home-bg.jpg"
+tags:
+    - 酷炫脑
+    - 脑力锻炼
+    - 笔记
 ---
 
 <head>
