--- a/_posts/2018-05-27-blog-init.html
+++ b/_posts/2018-05-27-blog-init.html
@@ -3,7 +3,9 @@ layout: post
 title:  "开篇"
 subtitle: "Blog Init."
 date:   2018-05-27
-background: ''
+header-img: ""
+tags:
+    - Intro
 ---
 
 <p>
