--- a/_posts/2018-07-12-improve-intellegence.html
+++ b/_posts/2018-07-12-improve-intellegence.html
@@ -3,12 +3,10 @@
 layout:     post
 title:      "酷炫脑智力课"
 subtitle:   "Ideas to Improve Intellegence"
-date:       2018-07-12 12:00:00
+date:       2018-07-13 12:00:00
 author:     "Gabriel"
-header-img: "img/home-bg.jpg"
+header-img: ""
 tags:
-    - 酷炫脑
-    - 脑力锻炼
     - 笔记
 ---
 
