--- a/_posts/2018-07-12-improve-intellegence.html
+++ b/_posts/2018-07-12-improve-intellegence.html
@@ -3,7 +3,7 @@
 layout:     post
 title:      "酷炫脑智力课"
 subtitle:   "Ideas to Improve Intellegence"
-date:       2018-07-13 12:00:00
+date:       2018-07-13
 author:     "Gabriel"
 header-img: ""
 tags:
