--- a/_posts/2018-07-12-improve-intellegence.html
+++ b/_posts/2018-07-12-improve-intellegence.html
@@ -19,7 +19,7 @@ tags:
 <p>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <font size="3">
-        本文是收听酷炫脑智力课时做的笔记，愿自己以后能一直保持对新鲜环境和事物的好奇心，以及多运动。
+        本文是收听酷炫脑智力课(微信公众号：酷炫脑)时做的笔记，愿自己以后能一直保持对新鲜环境和事物的好奇心，以及多运动。
     </font>
 </p>
 
