update new post 20190814

--- a/_posts/2018-06-03-online-calc.html
+++ b/_posts/2018-06-03-online-calc.html
@@ -3,7 +3,7 @@ layout: post
 title:  "实时更新统计值的原理与Python实现"
 subtitle: "Online Calculation Illustration and Python Implementation"
 date:   2018-06-03
-header-img: ""
+header-img: "img/head1.jpg"
 tags:
     - Thoughts
     - Research
