--- a/_posts/2018-07-06-cs231-summary.html
+++ b/_posts/2018-07-06-cs231-summary.html
@@ -3,7 +3,7 @@ layout: post
 title:  "cs231n总结和量化脑洞"
 subtitle: "Computational Vision in Quant"
 date:   2018-07-06
-header-img: ""
+header-img: "img/head1.jpg"
 tags:
     - Note
     - Quant
