--- a/_posts/2018-07-12-improve-intellegence.html
+++ b/_posts/2018-07-12-improve-intellegence.html
@@ -5,7 +5,7 @@ title:      "酷炫脑智力课"
 subtitle:   "Ideas to Improve Intellegence"
 date:       2018-07-13
 author:     "Gabriel"
-header-img: ""
+header-img: "img/head1.jpg"
 tags:
     - 笔记
 ---
