--- a/_posts/2019-04-27-another-name.html
+++ b/_posts/2019-04-27-another-name.html
@@ -4,7 +4,7 @@ title:  "起了个别名叫季柏羽"
 subtitle: "Another Name"
 date:   2019-04-27
 author:     "Gabriel"
-header-img: ""
+header-img: "img/head1.jpg"
 tags:
     - Random
 ---
