--- a/_posts/2018-05-29-intro.html
+++ b/_posts/2018-05-29-intro.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Intro"
 subtitle: "Intro"
 date:   2018-05-29
-header-img: ""
+header-img: "img/head1.jpg"
 tags:
     - Intro
 ---
