--- a/_posts/2018-06-28-blinkle-idea-1.html
+++ b/_posts/2018-06-28-blinkle-idea-1.html
@@ -3,7 +3,7 @@ layout: post
 title:  "用人工智能减少广告电话的骚扰"
 subtitle: "How to stop being disturbed by advertising call"
 date:   2018-06-28
-header-img: ""
+header-img: "img/head1.jpg"
 tags:
     - Thoughts
     - Blockchain
