--- a/_posts/2018-06-28-blinkle-idea-1.html
+++ b/_posts/2018-06-28-blinkle-idea-1.html
@@ -12,6 +12,7 @@ tags:
 
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     手机号码用十多年，便有了感情，即使在国外念书时也有一直保留这个号码。有可能得话，大概还会用很久很久。可是在这个
     个人信息泄露那么严重的社会，尤其在国内，号码用久了就会越来越多广告电话，骚扰信息。跟一个工作邮箱用久了以后一样，
     就会多了很多垃圾邮件，无效信息。电子邮件一般会有智能过滤和处理，随着AI的发展，计算机视觉和自然语言处理在某些领
@@ -19,6 +20,7 @@ tags:
 </p>
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     但是，为什么不能再深入或发散发展一下。刚回国的那段时间，可能因为很久没用，所以老的手机号码接到的广告电话还没那么
     多，过一段时间后到现在基本上每天两三个，经常打乱我的研究的节奏。现在每次看到陌生电话我第一反应都是又有广告，但是
     有时候又不能因为是陌生电话不接，万一是重要的电话呢。接了之后，果然绝大部分是广告，甚至有些是电话录音，一点诚意都
@@ -29,6 +31,7 @@ tags:
 </p>
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     现在手机也有一些垃圾信息的过滤和处理，和邮件一样，这些都是通过文本识别垃圾文字，然后阻挡到垃圾信箱。客观来说，这
     已经带来很大改善了，极大地提高了我们处理邮件的效率。但是贪心的人类是不会知足的，满足了这个，又想要更多的。这也是
     我们进步的原因。我思考了下，开了些脑洞，不一定正确，也不一定可行，就是胡说八道一下。
@@ -36,6 +39,7 @@ tags:
 
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     其实我有点不爽为什么运营商为什么不做一个可以侦测且过滤掉这些电话的小功能让用户选用，当然国内运营商让用户不爽的多
     的是，所以我也很快说服了自己。我也为他们找了一些原因，可能不太全面。
     <ul>
@@ -68,6 +72,7 @@ tags:
 </p>
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     大概这么多，希望真有团队无聊能把这东西做出来，不过数据貌似不太好拿。随便聊聊，希望有兴趣的朋友联系我进一步交流。
     欢迎轻拍。
 </p>
