--- a/_posts/2019-04-27-another-name.html
+++ b/_posts/2019-04-27-another-name.html
@@ -10,6 +10,7 @@ tags:
 ---
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     人总是会做一些自己意向不到的事情，比如说你不到12个小时之后有一件很重要的事情，理应去准备一下，结果你却选择看了
     一部三个小时毫无关系的电影，然后用半个小时simulate了下，就去睡觉了。我表达能力不好，无论书面还是口头，经常有很
     多凌乱的想法，但苦于无法准确表述，觉得一辈子都不会写东西了，结果很自然的给自己起了个笔名，这让我很无语。既然如
@@ -17,6 +18,7 @@ tags:
 </p>
 
 <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     季柏羽这个名字的灵感是来源于我用了十几年的英文名Gabriel，在我的意淫下，读音和含义都挺像。崇尚自由又安于稳定，
     神的信使四季不停的接受各地的信息。游历各地，落叶归根。I still believe every experience matters.
 </p>
@@ -24,5 +26,6 @@ tags:
 <p>
     PS:
         上文记于2018-06-01，怕自己三分钟热度，很快就不用这名字了。结果到现在，发现不时会用一下，起码现在还记得。
+</p>
 
 Gabriel
