upload new post

--- a/_posts/2018-06-03-online-calc.html
+++ b/_posts/2018-06-03-online-calc.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "实时更新统计值的原理与Python实现"
 subtitle: "Online Calculation Illustration and Python Implementation"
+author:     "Gabriel"
 date:   2018-06-03
 header-img: "img/head1.jpg"
 tags:
