--- a/_posts/2018-07-06-cs231-summary.html
+++ b/_posts/2018-07-06-cs231-summary.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "cs231n总结和量化脑洞"
 subtitle: "Computational Vision in Quant"
+author:     "Gabriel"
 date:   2018-07-06
 header-img: "img/head1.jpg"
 tags:
