--- a/_posts/2019-08-31-ukiyo-in-798.html
+++ b/_posts/2019-08-31-ukiyo-in-798.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "记798浮世绘观展"
 subtitle: "Gallery aboout Ukiyo in 798"
+author: "Gabriel"
 date:   2019-08-31
 header-img: "img/ukiyo/1.jpg"
 tags:
