--- a/_posts/2019-11-03-information-source.html
+++ b/_posts/2019-11-03-information-source.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "信息来源"
 subtitle: "Information Sources"
+author: "Gabriel"
 date:   2019-11-03
 header-img: "img/head1.jpg"
 tags:
