--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: Seriously Chatting for All
+description: Seriously chatting non-sense
 header-img: "img/tag-bg.jpg"
 ---
 
