--- a/_posts/2019-07-27-media-prejudice-freespeech-democracy.html
+++ b/_posts/2019-07-27-media-prejudice-freespeech-democracy.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "媒体的偏见、言论自由与民主"
 subtitle: "Prejudice, Free Speech and Democracy"
+author: "Gabriel"
 date:   2019-08-14
 header-img: "img/head1.jpg"
 tags:
