--- a/_posts/2019-08-17-almost-2-year-working-as-quant-research.html
+++ b/_posts/2019-08-17-almost-2-year-working-as-quant-research.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "Quant工心酸路之一步一步地面爬"
 subtitle: "Almost 2 years working as Quant Researcher"
+author: "Gabriel"
 date:   2019-08-17
 header-img: "img/head1.jpg"
 tags:
