--- a/_posts/2019-10-27-to-the-oak-tree.html
+++ b/_posts/2019-10-27-to-the-oak-tree.html
@@ -2,6 +2,7 @@
 layout: post
 title:  "致橡树 by 舒婷"
 subtitle: "To the Oak Tree"
+author: "Gabriel"
 date:   2019-11-03
 header-img: "img/head1.jpg"
 tags:
