--- a/_posts/2019-11-10-wework_and_housing_price.html
+++ b/_posts/2019-11-10-wework_and_housing_price.html
@@ -145,7 +145,7 @@ tags:
 
 <p>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    最后附上一个Bloomberg关于Wework的视频
+    最后附上一个Bloomberg关于Wework的视频，让大家感受下资本市场的疯狂。看来前几年全世界的钱都很多呀。
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/X2LwIiKhczo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>The Spectacular Rise and Fall of WeWork</iframe>
 
