--- a/_posts/2019-11-10-wework_and_housing_price.html
+++ b/_posts/2019-11-10-wework_and_housing_price.html
@@ -4,7 +4,7 @@ title:  "WeWork和房价"
 subtitle: "WeWork and Housing Price"
 author: "Gabriel"
 date:   2019-11-10
-header-img: "img/head1.jpg"
+header-img: "/img/head1.jpg"
 tags:
     - News
     - Summary
