--- a/_posts/2019-11-10-wework_and_housing_price.html
+++ b/_posts/2019-11-10-wework_and_housing_price.html
@@ -4,7 +4,7 @@ title:  "WeWork和房价"
 subtitle: "WeWork and Housing Price"
 author: "Gabriel"
 date:   2019-11-10
-header-img: "/img/head1.jpg"
+header-img: "img/head1.jpg"
 tags:
     - News
     - Summary
@@ -135,7 +135,6 @@ tags:
         <li>房价很高，能为满足自己居住需求而付钱买房的人不多，所以从供需角度出发的价格发现功能非常弱。</li>
         <li>存在套利和投机的人，他们是买来不是为了使用，而是在房价预期升值的前提下加杠杆再投资。</li>
         <li>话语权基本掌握在有钱有权的人当中（不仅仅是房屋市场），这就可以影响市场了。</li>
-        <li></li>
     </ul>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     所以，假设大佬们都打算退出套现了，估计接盘侠可能很快不够用了。问题在于，如果说有钱有权且想投资买房抬高房价并预
