--- a/_posts/2019-11-28-how_to_surf_the_world_correctly.html
+++ b/_posts/2019-11-28-how_to_surf_the_world_correctly.html
@@ -163,7 +163,7 @@ tags:
 
 <ul>
     <li>AWS, Azure, 阿里云, 腾讯云，这些我就不说了，因为太贵了用不起。等以后有更大需求再考虑吧。</li>
-    <li>我常用的<a href="https://www.vultr.com/?ref=7836973">Vultr</a>，用了快一年了。</li>
+    <li>我常用的<a href="https://www.vultr.com/?ref=7836973">Vultr</a>，用了快一年了。(限时送50刀优惠链接点<a href="https://www.vultr.com/?ref=7999279-4F">这里</a>)</li>
     <li>据说在
         <a href="https://bandwagonhost.com/aff.php?aff=54585">搬瓦工(Bangwagong)</a>和
         <a href="https://clientarea.gigsgigscloud.com/?affid=2589">GigsGigsCloud</a>(这个是可以申请打折券的，请联系我)在大厂和Vultr之外也还可以。
@@ -285,6 +285,8 @@ Gabriel
 <h2>推广链接</h2>
 <hr>
 <ul>
+    <li><a href="https://www.vultr.com/?ref=7836973">Vultr</a></li>
+    <li><a href="https://www.vultr.com/?ref=7999279-4F">Vultr限时送50刀优惠链接</a></li>
     <li><a href="https://justmysocks.net/members/aff.php?aff=7280">Justmysocks</a></li>
     <li><a href="https://bandwagonhost.com/aff.php?aff=54585">搬瓦工</a></li>
     <li><a href="https://clientarea.gigsgigscloud.com/?affid=2589">Gigsgigscloud</a>，这个是可以申请打折券的，请联系我。</li>
