--- a/_posts/2019-11-28-how_to_surf_the_world_correctly.html
+++ b/_posts/2019-11-28-how_to_surf_the_world_correctly.html
@@ -259,6 +259,13 @@ tags:
 <ul>
     <li><a href="https://doubibackup.com/">逗比</a></li>
     <li><a href="https://www.ssr.tools/">SSR中文网</a></li>
+    <li>
+        <a href="https://medium.com/@vonsis/%E8%BF%91%E6%9C%9F%E4%BB%A5%E6%9D%A5%E7%A7%91%E5%AD%A6%E4%B8%8A%E7%BD%91-%E7%BF%BB%E5%A2%99-%E4%BA%8B%E5%AE%9C%E7%9A%84%E4%B8%80%E4%BA%9B%E6%80%BB%E7%BB%93-8928d55bce73">
+            @vonsis/近期以来科学上网-翻墙-事宜的一些总结
+        </a>
+    </li>
+    <li><a href="https://ssr.tools/202"></a>安全使用SSR</li>
+
 </ul>
 
 <br>
@@ -279,6 +286,9 @@ tags:
 </p>
 
 <br>
+
+
+
 Gabriel
 
 <br><br><br><br><br>
